src/components/Main/main.scss
@import '../../styles/variables.scss';

@keyframes blink {  
  0% { 
    opacity: 0;
  }
  
  50% { 
    opacity: 1;
  }
}

.main {
  align-items: center;
  display: flex;
  max-width: 880px;
  
  @media screen and (max-width: $mobile) {
    align-items: center;
    display: flex;
    flex-direction: column;
    margin-top: 48px;
  }
}

.main-text {
  h1,
  h2 {
    color: $white;
    font-family: $inconsolata-font-family;
    margin: 0 0 20px 0;
  }

  h1 {
    font-size: 48px;
    font-weight: 600;

    @media screen and (max-width: $mobile) {
      font-size: 28px;
      text-align: left;
    }

    &::after {
      animation: blink 1s steps(1, end) infinite;
      content: '| ';
    }
  }

  h2 {
    font-size: 34px;

    @media screen and (max-width: $mobile) {
      font-size: 18px;
      text-align: left;
      margin-left: 24px;
    }
  }

  h3 {
    font-size: 20px;
    line-height: 30px;

    @media screen and (max-width: $mobile) {
      font-size: 18px;
      text-align: left;
      margin-left: 24px;
    }
    
    a {
      color: $color5;
      font-weight: 600;
      text-decoration: none;
      width: 120px;

      &:nth-child(2) {
        color: $color2;

        &:hover {
          color: $color5;
        }
      }

      &:nth-child(3) {
        color: $color3;

        &:hover {
          color: $color4;
        }
      }

      &:nth-child(4) {
        color: $color4;
        
        &:hover {
          color: $color3;
        }
      }

      &:nth-child(5) {
        color: $color5;

        &:hover {
          color: $color2;
        }
      }

      &:nth-child(6) {
        &:hover {
          color: $white;
        }
      }
  
      &:hover {
        cursor: pointer;
      }
    }
  }
}

.intro-paragraph {
  font-size: 48px;
  font-weight: 600;

  @media screen and (max-width: $mobile) {
    font-size: 28px;
    text-align: left;
  }

  &::after {
    animation: blink 1s steps(1, end) infinite;
    content: '| ';
  }
}

.damir-img {
  border: 5px solid $white;
  border-radius: 50%;
  min-height: 200px;
  margin: 0 24px 0 0;
  min-width: 200px;

  @media screen and (max-width: $mobile) {
    margin-right: 0;
    margin-bottom: 48px;
    min-height: 150px;
    min-width: 150px;
  }
}

